--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
                 flex-wrap: wrap;
                 width: 1100;
                 height: 658px;
-                margin-top: 20px;}
+                margin-left: 70px;}
 
 .box { width: 300px;
         height: 400px;
@@ -115,15 +115,22 @@
 
 .box:nth-child(1) { background-color: #FBBA77; }
             
-.box:nth-child(2) { background-color: #41EAE3;  }
+.box:nth-child(2) { background-color: #41EAE3;  
+                        margin-left: 30px;
+                        margin-right: 30px; }
             
 .box:nth-child(3) { background-color: #69529F;  }
             
-.box:nth-child(4) { background-color: #4386D2;}
+.box:nth-child(4) { background-color: #4386D2;
+                        margin-top: 60px;}
             
-.box:nth-child(5) { background-color: #A5A2F6;}
+.box:nth-child(5) { background-color: #A5A2F6;
+        margin-top: 60px;}
 
-.box:nth-child(6) { background-color: #FF8088;}
+
+.box:nth-child(6) { background-color: #FF8088;
+        margin-top: 60px;}
+
 
 .read-more {    width: 120px;
                 border-radius: 30px;
@@ -132,14 +139,17 @@
                 border-width: 2px;
                 display: flex;
                 align-items: center;
-                justify-content: center;}
+                justify-content: center;
+                color: #FFFFFF;}
                 
 .read-more-text {  font-size: 15px;
-                 font-family: 'Roboto', sans-serif;}
+                 font-family: 'Roboto', sans-serif;
+                color: #FFFFFF;}
 
 .box-title { font-size: 22px;
         margin-top: 20px;
-        font-family: 'Lato', sans-serif;}
+        font-family: 'Lato', sans-serif;
+        color: #FFFFFF;}
     
 .box-text {
         width: 280px;
@@ -147,4 +157,5 @@
         margin-bottom: 25px;
         margin-top: 30px;
         font-family: 'Roboto', sans-serif;
+        color: #FFFFFF;}
     }}
